# phprust-bench

./: .env.example  Cargo.toml  Readme.md  Readme_th.md  build.rs  call_go.php  call_rust.php  call_rust_eratos.php  call_rust_grpc.php  eratos.php  index.php  jitcheck.php
axum_prime/: Cargo.toml
axum_prime/src/: main.rs
client/: main.rs
go_gin_prime/: go.mod  main.go
golang/: main.go
proto/: sieve.proto
server/: main.rs
src/: main.rs
