[package]
name = "phprust-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "phprust-bench-eratos"
path = "src/bin/eratos.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"


[[bin]]
name = "phprust-bench-client"
path = "client/main.rs"

[[bin]]
name = "phprust-bench-server"
path = "server/main.rs"
